# ghibli-django-api

./: Dockerfile  README.md  docker-compose.yaml
app/: pyproject.toml
app/ghibli/: asgi.py  settings.py  urls.py  wsgi.py
app/main/: admin.py  cron.py  models.py  serializers.py  views.py
app/main/management/commands/: import_data.py
app/main/migrations/: 0001_initial.py
app/main/tests/: test_api_authentication.py  test_api_data.py
